# gt-skill

./: .env.example  .gitignore  README.md  SPEC.md  consistency_runner.py  gtskill_chrome.py  gtskill_sidecar.py  pyproject.toml  run.py  skill_creator_runner.py  test_runner.py
.claude-skill-creator/: SKILL.md
.claude-skill-creator/references/: api_cheatsheet.md  formatting_decisions.md
.claude-skill-creator/scripts/: gt_house_style.py  setup_gt_chrome.sh
corpus/: README.md
corpus/financial/: bad_table.py  good_table.py  rationale.md
corpus/heatmap/: bad_table.py  good_table.py  rationale.md
corpus/ranking/: bad_table.py  good_table.py  rationale.md
corpus/scientific/: bad_table.py  good_table.py  rationale.md
corpus/summary_stats/: bad_table.py  good_table.py  rationale.md
corpus/time_series/: bad_table.py  good_table.py  rationale.md
gtskill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompts/easy/: gtcars_hp_price.json  islands_sizes.json  simple_table.txt  titled_table.txt
prompts/hard/: conditional_formatting.txt  full_featured.txt  sp500_monthly_performance.json  towny_growth_trends.json
prompts/medium/: airquality_monthly_summary.json  formatted_numbers.txt  gtcars_top10_by_country.json  styled_headers.txt
runner/: __init__.py  convergence.py  discover.py  engine.py  events.py  orchestrate.py  plan.py  sidecar.py  spec.py
runs/20260617-120049/: prompt.txt  system_prompt.txt  trace.jsonl
skill/: SKILL.md
tests/: test_palette_parity.py  test_skill_loaded.py
web/: __init__.py  history.py  server.py
(+159 files in other folders)
