[project]
name = "gtskill"
version = "0.1.0"
description = "Evaluate a Great Tables skill with chatlas + Anthropic, judged by an LLM."
requires-python = ">=3.12"
dependencies = [
    "chatlas>=0.9",
    "anthropic>=0.40",
    "mcp>=1.3",
    "great_tables>=0.20",
    "nokap>=0.1.0",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
gtskill = "run:main"
