[project]
name = "gtskill"
version = "0.1.0"
description = "Evaluate a great_tables skill with the Claude Agent SDK, judged by an LLM."
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2",
    "great_tables>=0.20",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
gtskill = "run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["run"]
